Fixed .row x gutter showing when on mobile. Fixed links/buttons allowing both hover and active styles to stack by disabling hover styles on active links/buttons. Switched fontBranding from PirataOne to Kurale to match the bestiary content and improve consistency.

--- a/src/scss/bestiary.scss
+++ b/src/scss/bestiary.scss
@@ -29,7 +29,7 @@
     color: $textPrimary;
     display: block;
 }
-.bestiary-link:hover {
+.bestiary-link:hover:not(.active) {
     font-weight: 300 !important;
 }
 .bestiary-link.active {
@@ -49,7 +49,7 @@
     display: block;
     font-weight: 600;
 }
-.bestiary-link-heading:hover {
+.bestiary-link-heading:hover:not(.active) {
     font-weight: 500 !important;
 }
 .bestiary-link-heading.active {
